--- a/rate-that-bench/src/index.html
+++ b/rate-that-bench/src/index.html
@@ -11,6 +11,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMsOO7-rBqT_85rRnRbYIn0QV3aIRKBHM">
+  </script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
